@@ -1,0 +1,28 @@
+<div class="#" id="#" i18n:domain="simplelayout"
+                tal:define="slclass view/getCSSClass;
+                text here/Description|nothing;
+                title here/Title | here/pretty_title_or_id;
+                fullblock python: text and ' sl-fullblock' or ''"
+                tal:attributes="id here/id;
+                                class string:simplelayout-block-wrapper ${slclass}${fullblock};
+                                style string:height:${view/getBlockHeight}">
+    <h2 tal:content="here/Title" tal:condition="here/getShowTitle|python:True" />
+    <a tal:attributes="name here/id" ></a>
+        <div class="sl-img-wrapper" tal:condition="view/checkForImage"
+             tal:attributes="style view/image_wrapper_style"
+             tal:define="image_desc context/getImageCaption | context/Description">
+                    <a  target="_blank"
+                        tal:attributes="
+                                        title image_desc;
+                                        href string:${context/absolute_url}/image
+                                        "
+                                        tal:omit-tag="not: here/getImageClickable|nothing"
+                    >
+                        <img tal:replace="structure view/getImageTag" />
+                    </a>
+                    <p tal:condition="image_desc"
+                       tal:content="context/getImageCaption">Caption</p>
+    </div>
+    <div tal:condition="text" class="sl-text-wrapper" tal:content="structure text"></div>
+</div>
+<span class="visualClear">&nbsp;</span>
