@@ -1,0 +1,7 @@
+from simplelayout.types.common.browser.views import BlockView
+
+
+class NewsBlockView(BlockView):
+    """News Block View"""
+
+
