@@ -25,4 +25,10 @@
     <include package=".portlets" />
     <include package=".viewlets" />
 
+
+    <class class="simplelayout.types.news.news.News">
+        <implements interface="simplelayout.base.interfaces.ISimpleLayoutBlock" />
+    </class> 
+
+
 </configure>
