@@ -3,14 +3,25 @@
     xmlns:browser="http://namespaces.zope.org/browser"
     i18n_domain="simplelayout">
 
-    <browser:viewlet
+<!--     <browser:viewlet
         for="simplelayout.types.news.interfaces.INews"
         name="simplelayout.types.news.image"
         manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
         class=".image.NewsImage"
         permission="zope2.View"
         />
+ -->
 
+    <!-- Simplelayout news listing, shows news block only -->
+    <browser:viewlet
+        for="simplelayout.types.news.interfaces.INews"
+        name="simplelayout.news.listing.body"
+        manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
+        class=".simplelayout_news_listing_viewlet.SimpleLayoutNewsListingViewlet"
+        permission="zope2.View"
+        />
+
+ 
     <browser:viewlet
         for="simplelayout.types.news.interfaces.INews"
         name="simplelayout.types.news.byline"
